# draw-scikit-tree

./: README.md  pyproject.toml
examples/: example_with_iris_dataset.ipynb
src/draw_scikit_tree/: __init__.py  _edge.py  _leaf.py  _node.py  _tree_graph.py  main.py
